--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "async-busboy": "^0.6.2",
     "is": "^3.2.1",
     "jsonwebtoken": "^8.2.0",
+    "koa-cors": "0.0.16",
     "locutus": "^2.0.9",
     "lodash": "^4.17.5",
     "log4js": "^2.3.12",
